# nrtk_cv

./: README.md  trackedObject.py  tracked_object.py  tracking.py  video_recorder.py  videocapture.py
cpp/: CMakeLists.txt  logic.cpp  main.cpp
cpp/include/: config.h  logic.h
python/: config.py  data_sender.py  gopro_stream.py  marker.py  requirements.txt  run.py  serial.txt  tracked_object.py  tracking.py  video_capture.py
